Ensure status bar visible on mobile

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -8,8 +8,9 @@
 
 $content-status-bar-spacing: 0.75rem;
 
+html,
 body {
-  height: 100vh;
+  height: 100%;
 }
 
 #app,
